# ComputationalGeometry

./: CMakeLists.txt  main.cc  vcpkg.json
include/: Vector2D.hh  cg.hh  edge.hh
include/algorithm/: ConvexHull.hh
include/basic/: Vector2D.hh
src/: CMakeLists.txt  Vector2D.cc  convexhull.cc
src/algorithm/: CMakeLists.txt  ConvexHull.cc
src/basic/: CMakeLists.txt  Vector2D.cc
tests/algorithm/: CMakeLists.txt  ConvexHull_test.cc
